@@ -1,11 +1,10 @@
 [tox]
 envlist = pypy, py26, py27, py33, py34
 
-
 [testenv]
 usedevelop = True
 deps =
-    crate[test]
+    crate[test] >= 0.13.2
     prompt-toolkit
     zope.testrunner
     py26: argparse
